# contourlab

./: .gitignore  README.md  __init__.py  pyproject.toml
contourlab/: __init__.py  analysis.py  backward_compatible_api.py  cli.py  plotting.py  plotting_package.py  plotting_refactored.py  plotting_refactored_edit.py  plotting_refactored_edit2.py  plotting_refractored.py  plotting_refractored_edit.py  plotting_v2.py  utils.py
data/: crn_table_sigma42.txt  crn_table_sigma51.txt  crn_table_sigma63.txt  crn_table_sigma82.txt  crn_table_sigma93.txt  very_simple_test.txt
examples/: Gussian_plus_noise_multiple_stacked.py  Gussian_plus_noise_multiple_stacked_filled.py  Gussian_plus_noise_multiple_subplot.py  Gussian_plus_noise_multiple_subplot_stacked_line.py  Gussian_plus_noise_one_plot.py  Gussian_plus_noise_one_plot_filtered.py  Gussian_subplot_addaptive_example.py  PandasDataFrame_example.py
src/contourlab/: cli.py
tests/: test_plotting.py
