[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contourlab"
version = "0.1.0"
description = "Toolkit for 2D contour plots and 3D stacked contour visualizations"
readme = "README.md"
license = "MIT"
authors = [
	{ name = "Elham Zakeri" , email="lhmzakeri@gmail.com"}
	]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy"
]
keywords = ["contour", "plot", "matplotlib", "3D"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
contourlab = "contourlab.cli:main"

[tool.setuptool.packages.find]
include = ["contourlab"]
exclude = ["data*"]
