[project]
name = "contourlab"
version = "0.1.0"
description = "Contour plotting utilities"
authors = [{ name="Elham", email="you@example.com" }]
license = "MIT"  # SPDX expression
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "matplotlib"]

[options.entry_points]
console_scripts =
    contourlab = contourlab.cli:main

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["contourlab*"]
exclude = ["data*"]

[project.scripts]
contourlab = "contourlab.cli:main"

